Archive2/48/3d789622a2b887/output
main.cpp: In function 'void f()':
main.cpp:7:10: error: 'string' is not a namespace-name
     std::string s = [](){ return "mola"; }
          ^
main.cpp:7:17: error: expected namespace-name before 's'
     std::string s = [](){ return "mola"; }
                 ^
main.cpp:7:17: error: expected ';' before 's'
main.cpp:7:17: error: 's' was not declared in this scope
